--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    {% block body %}
     <div class="container">
         <div class="well text-center">
             <h1>Python Flask CRUD Web Application Development </h1>
@@ -33,11 +34,106 @@
                         <td>Parwiz</td>
                         <td>par@gmail.com</td>
                         <td>043849384934</td>
+                        <td>
+                            <a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit">Edit</a>
+                            <a href="" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure To Delete?')">DELETE</a>
+                        </td>
                     </tr>
                 </table>
             </div>
         </div>
+
+    <div id="#mymodal" class="modal fade" role="dialog">
+
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Please Insert Data</h4>
+            </div>
+
+            <div class="modal-body">
+
+                <form action="" method="POST">
+
+                    <div class="form-group">
+
+                        <label>Name:</label>
+                        <input type="text" class="form-control" name="name" required="1">
+
+                    </div>
+                    <div class="form-group">
+
+                        <label>Email:</label>
+                    </div>
+
+                    <div class="form-group">
+
+                        <label>Phone:</label>
+                        <input type="text" class="form-control" name="phone" required="1">
+
+                    </div>
+                    <div class="form-group">
+
+                        <button class="btn btn-primary" type="submit">Insert Data</button>
+
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
     </div>
+</div>
+</div><div id="myModal" class="modal fade" role="dialog">
+
+
+   <div class="modal-dialog">
+      <div class="modal-content">
+         <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Please Insert Data</h4>
+         </div>
+         <div class="modal-body">
+
+            <form action="{{ url_for('insert') }}" method="POST">
+               <div class="form-group">
+
+                  <label>Name:</label>
+                  <input type="text" class="form-control" name="name" required="1">
+
+               </div>
+                <div class="form-group">
+
+                  <label>Email:</label>
+                  <input type="text" class="form-control" name="email" required="1">
+
+               </div>
+                <div class="form-group">
+
+                  <label>Phone:</label>
+                  <input type="text" class="form-control" name="phone" required="1">
+
+               </div> 
+               <div class="form-group">
+
+                  <button class="btn btn-primary" type="submit">Insert Data</button>
+
+               </div>
+            </form>
+
+         </div>
+         <div class="modal-footer">
+
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+
+         </div>
+      </div>
+   </div>
+</div>
+
+{% endblock %}
 
 
         <div class="well">
@@ -47,5 +143,8 @@
         </div>
     </div>
 </body>
+
+<script type="text/javascript" src="{{url_for('static', filename='js/jquery-3.6.4.min.js')}}"></script>
+<script type="text/javascript" src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
 
 </html>
