--- a/templates/index.html
+++ b/templates/index.html
@@ -15,122 +15,77 @@
             <h1>Python Flask CRUD Web Application Development </h1>
         </div>
        
-    <div class="container">
-        <div class="row">
-            <div class="col md-12">
-                <h2>Student List <button type="button" class="btn btn-success float-end" data-toggle="modal" data-target="#mymodal">Add Student Data </button> </h2>
+<div class="container">
+    <div class="row">
+        <div class="col md-12">
+            <h2>Student List <button type="button" class="btn btn-success float-end" data-toggle="modal" data-target="#mymodal">Add Student Data </button> </h2>
 
-                <table class="table table-striped">
-                    <tr>
-                        <th>Serial</th>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Phone</th>
-                        <th>Action</th>
-                    </tr>
+            <table class="table table-striped">
+                <tr>
+                    <th>Serial</th>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Phone</th>
+                    <th>Action</th>
+                </tr>
 
-                    <tr>
-                        <td>01</td>
-                        <td>Parwiz</td>
-                        <td>par@gmail.com</td>
-                        <td>043849384934</td>
-                        <td>
-                            <a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit">Edit</a>
-                            <a href="" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure To Delete?')">DELETE</a>
-                        </td>
-                    </tr>
-                </table>
-            </div>
+                <tr>
+                    <td>01</td>
+                    <td>Parwiz</td>
+                    <td>par@gmail.com</td>
+                    <td>043849384934</td>
+                    <td>
+                        <a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit">Edit</a>
+                        <a href="" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure To Delete?')">DELETE</a>
+                    </td>
+                </tr>
+            </table>
         </div>
+    </div>
 
-    <div id="#mymodal" class="modal fade" role="dialog">
-
+    <div id="mymodal" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Please Insert Data</h4>
-            </div>
+                    <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Please Insert Data</h4>
+                </div>
 
-            <div class="modal-body">
+                <div class="modal-body">
 
-                <form action="" method="POST">
+                    <form action="" method="POST">
 
-                    <div class="form-group">
+                        <div class="form-group">
 
-                        <label>Name:</label>
-                        <input type="text" class="form-control" name="name" required="1">
+                            <label>Name:</label>
+                            <input type="text" class="form-control" name="name" required="1">
 
-                    </div>
-                    <div class="form-group">
+                        </div>
+                        <div class="form-group">
 
-                        <label>Email:</label>
-                    </div>
+                            <label>Email:</label>
+                            <input type="text" class="form-control" name="email" required="1">
+                        </div>
 
-                    <div class="form-group">
+                        <div class="form-group">
 
-                        <label>Phone:</label>
-                        <input type="text" class="form-control" name="phone" required="1">
+                            <label>Phone:</label>
+                            <input type="text" class="form-control" name="phone" required="1">
 
-                    </div>
-                    <div class="form-group">
+                        </div>
+                        <div class="form-group">
 
-                        <button class="btn btn-primary" type="submit">Insert Data</button>
+                            <button class="btn btn-primary" type="submit">Insert Data</button>
 
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
-</div><div id="myModal" class="modal fade" role="dialog">
-
-
-   <div class="modal-dialog">
-      <div class="modal-content">
-         <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Please Insert Data</h4>
-         </div>
-         <div class="modal-body">
-
-            <form action="{{ url_for('insert') }}" method="POST">
-               <div class="form-group">
-
-                  <label>Name:</label>
-                  <input type="text" class="form-control" name="name" required="1">
-
-               </div>
-                <div class="form-group">
-
-                  <label>Email:</label>
-                  <input type="text" class="form-control" name="email" required="1">
-
-               </div>
-                <div class="form-group">
-
-                  <label>Phone:</label>
-                  <input type="text" class="form-control" name="phone" required="1">
-
-               </div> 
-               <div class="form-group">
-
-                  <button class="btn btn-primary" type="submit">Insert Data</button>
-
-               </div>
-            </form>
-
-         </div>
-         <div class="modal-footer">
-
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-
-         </div>
-      </div>
-   </div>
 </div>
 
 {% endblock %}
