--- a/templates/index.html
+++ b/templates/index.html
@@ -17,31 +17,31 @@
        
 <div class="container">
     <div class="row">
-        <div class="col md-12">
-            <h2>Student List <button type="button" class="btn btn-success float-end" data-toggle="modal" data-target="#mymodal">Add Student Data </button> </h2>
+        <div class="col-md-12">
+            <h2>Student List <button type="button" class="btn btn-success float-end" data-bs-toggle="modal" data-bs-target="#mymodal">Add Student Data </button> </h2>
 
             <table class="table table-striped">
                 <tr>
                     <th>Serial</th>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th>Phone</th>
-                    <th>Action</th>
-                </tr>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Phone</th>
+                        <th>Action</th>
+                    </tr>
 
-                <tr>
-                    <td>01</td>
-                    <td>Parwiz</td>
-                    <td>par@gmail.com</td>
-                    <td>043849384934</td>
-                    <td>
-                        <a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit">Edit</a>
-                        <a href="" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure To Delete?')">DELETE</a>
-                    </td>
-                </tr>
-            </table>
+                    <tr>
+                        <td>01</td>
+                        <td>Parwiz</td>
+                        <td>par@gmail.com</td>
+                        <td>043849384934</td>
+                        <td>
+                            <a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit">Edit</a>
+                            <a href="" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure To Delete?')">DELETE</a>
+                        </td>
+                    </tr>               
+                </table>
+            </div>
         </div>
-    </div>
 
     <div id="mymodal" class="modal fade" role="dialog">
         <div class="modal-dialog">
@@ -86,6 +86,7 @@
             </div>
         </div>
     </div>
+
 </div>
 
 {% endblock %}
