--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,31 @@
         <div class="col-md-12">
             <h2>Student List <button type="button" class="btn btn-success float-end" data-bs-toggle="modal" data-bs-target="#mymodal">Add Student Data </button> </h2>
 
+
+            {%with messages = get_flashed_messages() %}
+
+            {%if messages%}
+
+            {%for message in messages%}
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                
+                <strong>Success!</strong> Data Inserted Successfully
+                <button type="button" class="btn-close" data-bs-dismiss="alert">
+
+                </button>
+            </div>
+                    {{message}}    
+            
+                       
+            
+            
+
+            {%endfor%}
+            {%endif%}
+            {%endwith%}
+
             <table class="table table-striped">
+                
                 <tr>
                     <th>Serial</th>
                         <th>Name</th>
@@ -29,64 +53,150 @@
                         <th>Action</th>
                     </tr>
 
+
+                    {%for row in students%}
                     <tr>
-                        <td>01</td>
-                        <td>Parwiz</td>
-                        <td>par@gmail.com</td>
-                        <td>043849384934</td>
+                        <td>{{row.0}}</td>
+                        <td>{{row.1}}</td>
+                        <td>{{row.2}}</td>
+                        <td>{{row.3}}</td>
+                        
                         <td>
-                            <a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit">Edit</a>
-                            <a href="" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure To Delete?')">DELETE</a>
+                            <a href="/update/{{row.0}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit">Edit</a>
+                            <a href="/delete/{{row.0}}" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure To Delete?')">DELETE</a>
                         </td>
-                    </tr>               
+                    </tr>
+                    <div id="modaledit{{row.0}}" class="modal fade" role="dialog">
+
+                        <div class="modal-dialog">
+
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">Update Information</h4>
+                                </div>
+
+                                <div class="modal-body">
+
+                                    <form action="{{url_for('insert')}}" method="POST">
+                
+                                        <div class="form-group">
+                                            <label>Name:</label>
+                                            <input type="hidden" name="id" value="{{row.0}}">
+
+                                            <input type="text" class="form-control" name="name" value="{{row.1}}" required="1">
+
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label>Email:</label>
+                                            <input type="hidden" name="id" value="{{row.1}}">
+
+                                            <input type="text" class="form-control" name="name" value="{{row.1}}" required="1">
+
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label>Phone:</label>
+                                            <input type="hidden" name="id" value="{{row.2}}">
+
+                                            <input type="text" class="form-control" name="name" value="{{row.1}}" required="1">
+
+                                        </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    </div>
+                    {%endfor%}               
                 </table>
             </div>
         </div>
 
     <div id="mymodal" class="modal fade" role="dialog">
         <div class="modal-dialog">
+
+
             <div class="modal-content">
-                    <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Please Insert Data</h4>
-                </div>
-
-                <div class="modal-body">
-
-                    <form action="{{url_for('insert')}}" method="POST">
-
-                        <div class="form-group">
-
-                            <label>Name:</label>
-                            <input type="text" class="form-control" name="name" required="1">
-
-                        </div>
-                        <div class="form-group">
-
-                            <label>Email:</label>
-                            <input type="text" class="form-control" name="email" required="1">
-                        </div>
-
-                        <div class="form-group">
-
-                            <label>Phone:</label>
-                            <input type="text" class="form-control" name="phone" required="1">
-
-                        </div>
-                        <div class="form-group">
-
-                            <button class="btn btn-primary" type="submit">Insert Data</button>
-
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
+      
+      
+               <div class="modal-header">
+      
+      
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+      
+      
+                  <h4 class="modal-title">Please Insert Data</h4>
+      
+      
+               </div>
+      
+      
+               <div class="modal-body">
+      
+      
+                  <form action="{{ url_for('insert') }}" method="POST">
+      
+      
+                     <div class="form-group">
+      
+      
+                        <label>Name:</label>
+                        <input type="text" class="form-control" name="name" required="1">
+      
+      
+                     </div>
+      
+      
+                      <div class="form-group">
+      
+      
+                        <label>Email:</label>
+                        <input type="text" class="form-control" name="email" required="1">
+      
+      
+                     </div>
+      
+      
+                      <div class="form-group">
+      
+      
+                        <label>Phone:</label>
+                        <input type="text" class="form-control" name="phone" required="1">
+      
+      
+                     </div>
+      
+      
+      
+                     <div class="form-group">
+      
+      
+                        <button class="btn btn-primary" type="submit">Insert Data</button>
+      
+      
+                     </div>
+      
+      
+                  </form>
+      
+      
+               </div>
+      
+      
+               <div class="modal-footer">
+      
+      
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      
+      
+               </div>
+      
+      
             </div>
-        </div>
-    </div>
-
+      
+      
+         </div>
 </div>
 
 {% endblock %}
